Fix preferences page on mobile. This completes basic mobile support.

--- a/preferences/index.css
+++ b/preferences/index.css
@@ -21,8 +21,13 @@ main ul ul {
 }
 
 .labelled-control input.replaced + label {
+    flex: none;
     width: 1em;
     padding-right: 0.2em;
+}
+
+.labelled-control input.replaced + label + label {
+    flex: 0 1 auto;
 }
 
 .controls-group.horizontal {
@@ -38,22 +43,15 @@ main ul ul {
 /* End clop preferences. */
 
 
-.no-sidenav main {
-    margin-left: 0;
-    margin-right: 0;
-}
-
-
 .labelled-control {
     align-items: flex-start;
 }
 
 #page-header {
-    margin: 0 1.5em 0 6em;
+    margin: 0 0 0 5em;
 }
 
 main ul, main ol {
-    white-space: nowrap;
     list-style-type: none;
 }
 
@@ -62,10 +60,13 @@ main ul, main ol {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    white-space: nowrap;
     border-bottom: dashed medium black;
+    padding-left: var(--main_padding-left);
+    padding-right: var(--main_padding-right);
     padding-bottom: 1em;
     margin: 1em 0;
+    margin-left: calc(-1 * var(--main_padding-left));
+    min-width: calc(100vw - var(--main_padding-left) - var(--main_padding-right));
 }
 
 #options #preferences-page-preferences {
@@ -76,9 +77,19 @@ main ul, main ol {
     border-left: solid medium transparent;
 }
 
+@media (max-width: 44em) {
+    #options #preferences-page-preferences {
+        position: initial;
+        top: initial;
+        left: initial;
+        padding-left: 0;
+        border-left: none;
+    }
+}
+
 
 #options > section {
-    margin: 1em 2em;
+    margin: 0 2em;
     flex: none;
 }
 
@@ -94,8 +105,14 @@ main ul, main ol {
 
 #preview {
     margin-top: 0em;
-    margin-left: 6em;
-    margin-right: 1.5em;
+    margin-left: 5em;
+    margin-right: 0;
+}
+
+@media (max-width: 34em) {
+    #page-header, #preview {
+        margin-left: 0;
+    }
 }
 
 #preview h1 {
